# AI-Prototyping-Lab---MedTech-Stream-2

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  Makefile  pyproject.toml
backend/app/: main.py
backend/app/routers/: health.py  interpret.py  parse.py
backend/app/services/: llm.py  parser.py
backend/tests/: test_health.py  test_interpret.py  test_parser_pdf.py  test_parser_text.py
frontend/: .eslintrc.js  Dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/health/: page.tsx
frontend/src/app/parse/: page.tsx
frontend/src/components/: Disclaimer.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Table.tsx  TextArea.tsx
frontend/src/components/ui/__tests__/: Button.test.tsx
frontend/styles/: theme.css
